# libnoise-modern

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh  build_windows.bat
examples/: README.md  complexplanet.cpp  texturegranite.cpp  texturejade.cpp  texturesky.cpp  textureslime.cpp  texturewood.cpp  worms.cpp
noise/: CMakeLists.txt  README.md
noise/include/noise/: basictypes.h  exception.h  interp.h  latlon.h  mathconsts.h  misc.h  noise.h  noisegen.h  vectortable.h
noise/include/noise/model/: cylinder.h  line.h  model.h  plane.h  sphere.h
noise/include/noise/module/: abs.h  add.h  billow.h  blend.h  cache.h  checkerboard.h  clamp.h  const.h  curve.h  cylinders.h  displace.h  exponent.h  invert.h  max.h  min.h  module.h  modulebase.h  multiply.h  perlin.h  power.h  ridgedmulti.h  rotatepoint.h  scalebias.h  scalepoint.h  select.h  spheres.h  terrace.h  translatepoint.h  turbulence.h  voronoi.h
noise/src/: noisegen.cpp
noise/src/model/: line.cpp  sphere.cpp
noise/src/module/: billow.cpp  curve.cpp  perlin.cpp  ridgedmulti.cpp  rotatepoint.cpp  select.cpp  terrace.cpp  turbulence.cpp  voronoi.cpp
noiseutils/: README.md  noiseutils.cpp
noiseutils/noiseutils/: noiseutils.h
